# talgonite

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  build_output.txt  build_output_new.txt  dist-workspace.toml
.cargo/: config.toml
.github/: build-setup.yml
.github/workflows/: android-build.yml  deploy-website.yml  release.yml
crc/: Cargo.toml
crc/src/: lib.rs
formats/: Cargo.toml
formats/imhex/: epf.hexpat
formats/src/: efa.rs  epf.rs  game_files.rs  hpf.rs  ktx2.rs  lib.rs  mpf.rs  spf.rs
game-input/: Cargo.toml
game-input/src/: actions.rs  bindings.rs  gamepad.rs  lib.rs  unified.rs
game-types/: Cargo.toml
game-types/src/: hotbar.rs  lib.rs  settings.rs  ui_types.rs
game-ui/: Cargo.toml  build.rs
game-ui/src/: assets.rs  frame_exchange.rs  input_bridge.rs  ipc.rs  lib.rs  state.rs
game-ui/ui/: game_state.slint  input_bridge.slint  lobby_state.slint  login_bridge.slint  login_state.slint  platform_state.slint  scene.slint  settings_state.slint  social_status_state.slint  theme.slint  types.slint  ui-settings.slint
game-ui/ui/components/: action_bar_messages.slint  actions_panel.slint  base_panel.slint  character_card.slint  chat_log.slint  drag_drop.slint  game_scene.slint  game_sidebar.slint  gold_drop_prompt.slint  group_invite_popup.slint  group_panel.slint  hot_bar.slint  icon.slint  in_game_hud.slint  installer_overlay.slint  inventory_panel.slint  login_modal.slint  login_scene.slint  menu_dialog.slint  player_hud.slint  popup_panel.slint  profile_panel.slint  server_manager.slint  social_status_panel.slint  status_effects_bar.slint  submitting_overlay.slint  world_context_menu.slint  world_labels.slint  world_list.slint  world_map.slint
game-ui/ui/components/settings/: controls.slint  game_menu.slint  graphics.slint  hotbars.slint  mouse.slint  panel.slint  widgets.slint
installer/: Cargo.toml
installer/src/: lib.rs
network/: Cargo.toml
network/src/: cipher.rs  lib.rs  packet.rs  protocol.rs
packets/: Cargo.toml
packets/src/: client.rs  lib.rs  server.rs  types.rs
packets/src/client/: begin_chant.rs  board_interaction.rs  chant.rs  click.rs  client_exception.rs  client_redirected.rs  client_walk.rs  create_char_finalize.rs  create_char_initial.rs  dialog_interaction.rs  display_entity_request.rs  editable_profile.rs  emote.rs  exchange_interaction.rs  exit_request.rs  gold_drop.rs  gold_dropped_on_creature.rs  group_invite.rs  heart_beat.rs  homepage_request.rs  ignore.rs  item_drop.rs  item_dropped_on_creature.rs  item_use.rs  login.rs  map_data_request.rs  menu_interaction.rs  meta_data_request.rs  notice_request.rs  option_toggle.rs  password_change.rs  pickup.rs  public_message.rs  raise_stat.rs  refresh_request.rs  self_profile_request.rs  sequence_change.rs  server_table_request.rs  set_notepad.rs  skill_use.rs  (+12 more)
packets/src/server/: accept_connection.rs  add_item_to_pane.rs  add_skill_to_pane.rs  add_spell_to_pane.rs  animation.rs  attributes.rs  body_animation.rs  cancel_casting.rs  client_walk_response.rs  connection_info.rs  cooldown.rs  creature_turn.rs  creature_walk.rs  display_board.rs  display_dialog.rs  display_exchange.rs  display_group_invite.rs  display_menu.rs  display_player.rs  display_public_message.rs  display_unequip.rs  display_visible_entities.rs  door.rs  editable_profile_request.rs  effect.rs  equipment.rs  exit_response.rs  force_client_packet.rs  health_bar.rs  heart_beat_response.rs  light_level.rs  location.rs  login_control.rs  login_message.rs  login_notice.rs  map_change_complete.rs  map_change_pending.rs  map_data.rs  map_info.rs  map_load_complete.rs  (+17 more)
rendering/: Cargo.toml
rendering/src/: camera.rs  gpu.rs  instance.rs  lib.rs  texture.rs  vertex.rs
rendering/src/scene/: constants.rs  effects.rs  mod.rs  texture_atlas.rs  texture_bind.rs  utils.rs
rendering/src/scene/creatures/: mod.rs  types.rs
rendering/src/scene/items/: mod.rs  types.rs
rendering/src/scene/map/: animations.rs  door_data.rs  floor.rs  map_tile.rs  mod.rs  renderer.rs  wall.rs
rendering/src/scene/players/: mod.rs  palettes.rs  types.rs
rendering/src/shaders/: effect.wgsl  shader.wgsl
src/: app_state.rs  audio.rs  events.rs  game_files.rs  lib.rs  main.rs  map_store.rs  metafile_store.rs  network.rs  resources.rs  rich_text.rs  session_prelogin.rs  settings.rs  settings_types.rs  slint_plugin.rs
src/ecs/: animation.rs  collision.rs  components.rs  hotbar.rs  interaction.rs  mod.rs  plugin.rs  social_status.rs  spell_casting.rs
src/ecs/components/: player.rs
src/ecs/systems/: auto_attack.rs  camera.rs  chat.rs  effects.rs  entities.rs  interruption.rs  map.rs  mod.rs  movement.rs  pathfinding.rs  rendering.rs
src/input/: README.md  mod.rs  rebinding.rs
src/plugins/: cursor.rs  input.rs  installer.rs  mod.rs  mouse_interaction.rs
src/render_plugin/: game.rs  minimap.rs  mod.rs  upload_belt.rs  upload_resource.rs
src/session/: mod.rs  pre_login.rs  runtime.rs
src/slint_support/: assets.rs  frame_exchange.rs  gpu_init.rs  input_bridge.rs  mod.rs  profile_bridge.rs  rendering_notifier.rs  state_bridge.rs
src/slint_support/callbacks/: game_callbacks.rs  input_callbacks.rs  settings_callbacks.rs
src/webui/: ipc.rs  keyring.rs  mod.rs  plugin.rs  settings.rs  state.rs
tests/: rendering_snapshots.rs
tests/common/: mod.rs
tests/snapshots/: rendering_snapshots__player_movement_finished.snap  rendering_snapshots__player_movement_halfway.snap.new
ui-viewer/: Cargo.toml  README.md  build.rs
ui-viewer-mcp/: Cargo.toml  README.md  mcp-config.json
ui-viewer-mcp/src/: main.rs
ui-viewer/src/: main.rs  viewer.slint
www/src/components/: DownloadButton.astro
