[package]
name = "formats"
version = "0.1.1"
edition = "2024"

[lib]
name = "formats"
path = "src/lib.rs"

[dependencies]
byteorder = "1.5"
bincode = { version = "2.0", features = ["serde"] }
tokio = { version = "1.0", features = ["sync"] }
anyhow = "1"
vk2dfd = "0.1"
num_enum = "0.7"
flate2 = { version = "1", features = [
    "cloudflare_zlib",
], default-features = false }

# Dependencies for game_files module
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
libarx = { version = "0.4", features = ["zstd"] }
jubako = "*"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = [
    "Window",
    "Request",
    "RequestInit",
    "RequestMode",
    "Response",
    "console",
] }
js-sys = "0.3"
tokio = { version = "1.0", features = ["sync"] }
futures = "0.3"
