[package]
name = "game-ui"
version.workspace = true
edition.workspace = true
build = "build.rs"

[dependencies]
game-types.workspace = true
formats.workspace = true
rendering.workspace = true
packets.workspace = true

bevy = { version = "0.18", default-features = false }
wgpu = "28"
smol = "2.0"
crossbeam-channel = "0.5"
i-slint-core = "=1.15.0"
slint = { version = "1.15.0", default-features = false, features = [
    "backend-default",
    "compat-1-2",
    "unstable-wgpu-28",
    "renderer-femtovg-wgpu",
] }
bincode = { version = "2.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }

[build-dependencies]
slint-build = "1.15.0"
