[package]
name = "installer"
version.workspace = true
edition.workspace = true

[lib]
name = "installer"
path = "src/lib.rs"

[dependencies]
anyhow = "1"
bincode = { version = "2.0", features = ["serde"] }
byteorder = "1.5"
circbuf = "0.2"
crc32fast = { version = "1", features = ["nightly"] }
exe = { version = "0.5", optional = true }
flate2 = { version = "1", features = ["zlib-rs"], default-features = false }
formats = { path = "../formats" }
memchr = "2.7"
rangemap = { version = "1.7", features = ["serde1"] }
reqwest = { version = "0.12", features = ["blocking"] }
vk2dfd = "0.1.0"
libarx = { version = "0.4", features = ["zstd"] }
jubako = "*"
tracing.workspace = true
indicatif = "0.17"
