[package]
name = "rendering"
version = "0.0.3"
edition = "2024"

[dependencies]
formats.workspace = true
glam = "0.30.3"
bytemuck = { version = "1.24", features = ["derive"] }
anyhow = "1"
etagere = "0.2"
rangemap = { version = "1.7", features = ["serde1"] }
bincode = { version = "2.0", features = ["serde"] }
byteorder = "1.5"
ktx2 = "0.4"
wgpu = "27.0"
tracing.workspace = true
num_enum = "0.7"
rustc-hash = "2.1.1"
