[package]
name = "rendering"
version.workspace = true
edition.workspace = true

[dependencies]
formats.workspace = true
glam = "0.30"
bytemuck = { version = "1.24", features = ["derive"] }
anyhow = "1"
etagere = "0.2"
rangemap = { version = "1.7", features = ["serde1"] }
bincode = { version = "2.0", features = ["serde"] }
byteorder = "1.5"
ktx2 = "0.4"
wgpu = "28"
tracing.workspace = true
num_enum = "0.7"
rustc-hash = "2.1.1"
