[package]
name = "ui-viewer"
version.workspace = true
edition.workspace = true
description = "Standalone Slint UI component viewer and testing tool"

[[bin]]
name = "ui-viewer"
path = "src/main.rs"

[dependencies]
game-ui.workspace = true
slint = { version = "1.15.0", default-features = false, features = [
    "backend-default",
    "compat-1-2",
] }
i-slint-core = "=1.15.0"
clap = { version = "4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[build-dependencies]
slint-build = "1.15.0"
